Added delete '/cameras/:id/recordings/snapshots' endpoint. (#934)
* Added delete '/cameras/:id/recordings/snapshots' endpoint.

* Removed commented code.

* Added Error if date out of hour && Added Swagger doc for delete endpoint.

* Added support for rfc3339_utc timestamp.

* Reduced recv_timeout for delete request.
